Fix z-index on center map icon

--- a/app/common/HikeCard/styles.module.scss
+++ b/app/common/HikeCard/styles.module.scss
@@ -22,7 +22,7 @@
       margin: 0;
       right: 10px;
       top: 72px;
-      z-index: 9999;
+      z-index: 1000;
       color: $primary;
     }
   }
